macviews: use platform colors for menus

Even when in Harmony mode, menus use the platform menu colors.

BUG=644555

Review-Url: https://codereview.chromium.org/2317103002
Cr-Commit-Position: refs/heads/master@{#416973}

Former-commit-id: 7c0347a058842e39f7b044793b7b688332a323bc